--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="3.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <img src="1697558548944.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>S.Haris</h1>
             <p>student</p>
         </div>
